--- a/app/css/feedback.css
+++ b/app/css/feedback.css
@@ -224,7 +224,7 @@ textarea{
 }
 /*     Adaptiv    */
 /* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px) {
+@media only screen and (max-width : 551px) {
 .contact_form {
 	position: relative;
 	width: 280px;
@@ -263,6 +263,31 @@ textarea{
 	margin: 0 0;
 }
 }
+@media only screen and (max-width : 380px) {
+.contact_form {
+	position: relative;
+	width: 250px;
+	margin: 0 auto;
+	padding: 0 3% 0 0;
+}
+
+.antispam{
+	width: 121px;
+	height: 68px;
+	margin-bottom: 35px;
+}
+.antispam:before{
+	width: 121px;
+	height: 68px;
+}
+.captcha{
+	width: 45%;
+}
+.contact_form button {
+	margin: 0 0;
+	width: 100px;
+}
+}
 @media only screen and (max-width : 320px) {
 .contact_form {
 	position: relative;
@@ -296,11 +321,6 @@ textarea{
 }
 .captcha{
 	width: 40%;
-}
-
-.contact_form button {
-	margin: 0 0;
-	width: 100px;
 }
 
 }
