--- a/app/css/portfolio.css
+++ b/app/css/portfolio.css
@@ -120,7 +120,7 @@
 	display: block;
     width: 21px;
     height: 21px;
-    background-position: -34px -148px;
+    background-position: -34px -574px;
 }
 
 .add_project:hover {
@@ -193,7 +193,7 @@
 	display: block;
 	width: 14px;
     height: 14px;
-    background-position: -5px -5px;
+    background-position: -37px -374px;
 }
 
 .add_project_form label {
@@ -270,7 +270,7 @@
 	top: 11px;
     width: 25px;
     height: 18px;
-    background-position: -135px -90px;
+    background-position: -3px -649px;
    	cursor: pointer;
    	overflow: hidden;
 }
@@ -430,15 +430,35 @@ textarea{
 
 }
 /*     Adaptiv    */
+@media only screen and (max-width : 690px) {
+.project_item{
+	margin-left: 12%;
+}
+}
+@media only screen and (max-width : 650px) {
+.project_item{
+	margin-left: 10%;
+}
+}
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 600px) {
 .project_item{
 	margin-left: 7%;
 }
 }
+@media only screen and (max-width : 590px) {
+.project_item{
+	margin-left: 8%;
+}
+}
+@media only screen and (max-width : 570px) {
+.project_item{
+	margin-left: 7%;
+}
+}
 /*     Adaptiv    */
 /* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px) {
+@media only screen and (max-width : 551px) {
 .project_list{
 	margin-left: 0;
 	margin-top: 0;
@@ -485,13 +505,11 @@ textarea{
 	line-height: 18px;
 }
 .add_project:after{
-	background-image: url(../images/polaroid.png);
-	display: block;
 	top: 41%;
 	left: 52%;
     width: 34px;
     height: 34px;
-    background-position: 0 0;
+    background-position: -3px -296px;
 }
 }
 
