--- a/app/css/style.css
+++ b/app/css/style.css
@@ -124,7 +124,7 @@ header{
 .icon, 
 .icon:before, 
 .icon:after {
-    background-image: url(../images/spritesheet.png);
+    background-image: url(../images/icon.png);
     background-repeat: no-repeat;
     display: block;
 }
@@ -136,10 +136,10 @@ header{
 	cursor: pointer;
     width: 10px;
     height: 22px;
-    background-position: -38px -58px;
+    background-position: -33px -836px;
 }
 .icon_fb:hover {
-    background-position: -134px -58px;
+    background-position: -45px -267px;
 }
 .icon_git {
 	position: absolute;
@@ -148,11 +148,11 @@ header{
     cursor: pointer;
     width: 29px;
     height: 23px;
-    background-position: -58px -89px;
+    background-position: -3px -418px;
 }
 
 .icon_git:hover {
-    background-position: -5px -90px;
+    background-position: -3px -392px;
 }
 .icon_tw {
 	position: absolute;
@@ -161,10 +161,10 @@ header{
     cursor: pointer;    
     width: 24px;
     height: 18px;
-    background-position: -182px -91px;
+    background-position: -31px -705px;
 }
 .icon_tw:hover {
-    background-position: -97px -119px;
+    background-position: -31px -684px;
 }
 .icon_vk {
 	position: absolute;
@@ -173,11 +173,11 @@ header{
     cursor: pointer;
     width: 15px;
     height: 19px;
-    background-position: -207px -59px;
+    background-position: -21px -770px;
 }
 
 .icon_vk:hover {
-    background-position: -182px -151px;
+    background-position: -3px -770px;
 }
 .content{
 	width: 95%;
@@ -300,7 +300,7 @@ header{
 	top: 0;
     width: 10px;
     height: 37px;
-    background-position: -50px -5px;
+    background-position: -20px -835px;
 
 }
 
@@ -333,7 +333,7 @@ header{
 	left: 18px;
     width: 17px;
     height: 13px;
-    background-position: -155px -35px;
+    background-position: -38px -333px;
 }
 .tel_cont:before{
 	content: '';
@@ -342,7 +342,7 @@ header{
 	left: 18px;		
     width: 17px;
     height: 22px;
-    background-position: -180px -59px;
+    background-position: -38px -349px;
 }
 .skype_cont:before{
 	content: '';
@@ -351,7 +351,7 @@ header{
 	left: 18px;
     width: 20px;
     height: 20px;
-    background-position: -140px -153px;
+    background-position: -35px -392px;
 }
 .contacts li:last-child{
 	-webkit-border-radius: 0 0 4px 4px;
@@ -501,7 +501,7 @@ header{
 	left: 0;
     width: 15px;
     height: 25px;
-    background-position: -97px -148px;
+    background-position: -40px -296px;
 }
 .skill:after{
 	content: '';
@@ -511,7 +511,7 @@ header{
 	right: 0;
     width: 8px;
     height: 25px;
-    background-position: -122px -148px;
+    background-position: -46px -836px;
 }
 .education {
 	margin-top: -20px;
@@ -566,7 +566,7 @@ header{
 .icon_work{
     width: 22px;
     height: 20px;
-    background-position: -134px -5px;
+    background-position: -33px -596px;
 	position: absolute;
 	top: 51%;
 	left: 17px;
@@ -579,7 +579,7 @@ header{
 .icon_school{
     width: 22px;
     height: 22px;
-    background-position: -65px -148px;
+    background-position: -3px -745px;
 	position: absolute;
 	top: 51%;
 	left: 18px;
@@ -592,7 +592,7 @@ header{
 .icon_vus{
     width: 28px;
     height: 19px;
-    background-position: -97px -90px;
+    background-position: -3px -543px;
 	position: absolute;
 	top: 53%;
 	left: 14px;
@@ -605,7 +605,7 @@ header{
 .icon_course{
     width: 16px;
     height: 21px;
-    background-position: -154px -58px;
+    background-position: -28px -746px;
 	position: absolute;
 	top: 53%;
 	left: 20px;
@@ -660,14 +660,14 @@ header{
 	display: inline-block;
     width: 24px;
     height: 22px;
-    background-position: -5px -148px;
+    background-position: -35px -501px;
     cursor: pointer;
 }
 
 .enter:hover{
     width: 24px;
     height: 22px;
-    background-position: -182px -119px;
+    background-position: -3px -720px;
 }
 .enter_text{
 	display: inline-block;
@@ -816,7 +816,7 @@ header{
 }
 .nav_icon{
 	position: relative;
-	background-image: url('../images/menu.png');
+	background-position: -3px -696px;
 	width: 25px;
 	height: 21px;
 	margin: 24px 11px 0 30px;
@@ -940,6 +940,28 @@ header{
 	margin-top: 3px;
 }
 }
+@media only screen and (max-width: 754px){
+.main_information{
+	padding-left: 3%;
+}
+.last{
+	margin-bottom: 119px;
+}
+
+}
+@media only screen and (max-width: 725px){
+.skills{
+	max-width: 60%;
+}
+.main_information{
+	padding-right: 2%;
+}
+.info{
+	max-width: 60%;
+	margin-top: -15px;
+}
+}
+
 /*     Adaptiv    */
 /* Small Devices, Tablets */
 @media only screen and (max-width: 600px){
@@ -953,7 +975,7 @@ header{
 	margin-bottom: 3.6%;
 }
 .main_information{
-	padding-bottom: 4%;
+	padding: 6% 6% 4% 6.5%;
 }
 .photo{
 	margin-top: -6px;
@@ -993,8 +1015,36 @@ header{
 	left: 16%;
 }
 }
+
+@media only screen and (max-width: 590px){
+
+.skills{
+	max-width: 60%;
+	margin-right: -10%;
+	margin-bottom: -4px;
+}
+.information{
+	margin-bottom: 3.6%;
+}
+.main_information{
+	padding: 3%;
+	padding-top: 6%;
+}
+.info{
+	margin-left: 15px;
+	max-width: 60%;
+	margin-top: 1px;
+	font-size: 13px;
+}
+.info_more{
+	max-width: 60%;
+}
+.last{
+	margin-bottom: 119px;
+}
+}
 /* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px) {
+@media only screen and (max-width : 551px) {
 header{
 	height: 65px;
 	border-bottom: 4px solid #fff;
@@ -1111,12 +1161,9 @@ header{
 	line-height: 1.4;
 }
 .icon_work{
-	background-image: url(../images/spritesheet_mob.png);
-	background-repeat: no-repeat;
-    display: block;
     width: 31px;
     height: 29px;
-    background-position: -5px -55px;
+    background-position: -3px -360px;
 	position: absolute;
 	top: 44px;
 	left: 50.5%;
@@ -1127,12 +1174,9 @@ header{
 	transform: translateX(-50%);   
 }
 .icon_school{
-	background-image: url(../images/spritesheet_mob.png);
-	background-repeat: no-repeat;
-    display: block;
     width: 27px;
     height: 27px;
-    background-position: -5px -102px;
+    background-position: -3px -619px;
 	position: absolute;
 	top: 44px;
 	left: 50.5%;
@@ -1143,12 +1187,9 @@ header{
 	transform: translateX(-50%);  
 }
 .icon_vus{
-	background-image: url(../images/spritesheet_mob.png);
-	background-repeat: no-repeat;
-    display: block;
     width: 39px;
     height: 26px;
-    background-position: -77px -89px;
+    background-position: -3px -267px;
 	position: absolute;
 	top: 46px;
 	left: 50.5%;
@@ -1159,12 +1200,9 @@ header{
 	transform: translateX(-50%);  
 }
 .icon_course{
-	background-image: url(../images/spritesheet_mob.png);
-	background-repeat: no-repeat;
-    display: block;
     width: 21px;
     height: 28px;
-    background-position: -46px -89px;
+    background-position: -34px -543px;
 	position: absolute;
 	top: 45px;
 	left: 50.5%;
@@ -1176,7 +1214,8 @@ header{
 }
 .footer_text{
 	margin-left: 28%;
-	font-size: 8px;
+	font-size: 9px;
+	margin-top: -12px;
 }
 .enter {
     margin-left: 6.4%;
@@ -1212,7 +1251,7 @@ header{
 	max-width: 90%;
 	position: absolute;
 	bottom: 138px;
-	margin-left: 1.3%;
+	margin-left: 6.3%;
 }
 
 .contacts li{
@@ -1228,45 +1267,35 @@ header{
 	top: 0;
     width: 14px;
     height: 48px;
-	background-image: url(../images/str_mob.png);
-	background-position: 0 0;
+	background-position: -3px -792px;
 	z-index: 2;
 }
 .gmail_cont:before{
-	background-image: url(../images/spritesheet_mob.png);
-	background-repeat: no-repeat;
-    display: block;
 	content: '';
 	position: absolute;
 	top: 30%;
 	left: 9%;
     width: 32px;
     height: 24px;
-    background-position: -125px -55px;
+    background-position: -3px -333px;
 }
 .tel_cont:before{
-	background-image: url(../images/spritesheet_mob.png);
-	background-repeat: no-repeat;
-    display: block;
 	content: '';
 	position: absolute;
 	top: 20%;
 	left: 10%;	
     width: 24px;
     height: 32px;
-    background-position: -170px -102px;
+    background-position: -31px -649px;
 }
 .skype_cont:before{
-	background-image: url(../images/spritesheet_mob.png);
-	background-repeat: no-repeat;
-    display: block;
 	content: '';
 	position: absolute;
 	top: 29%;
 	left: 9%;
     width: 28px;
     height: 28px;
-    background-position: -132px -102px;
+    background-position: -3px -565px;
 }
 
 .contacts a{
@@ -1294,7 +1323,7 @@ header{
 	cursor: pointer;
 	position: relative;
 	display: inline-block;
-	margin-left: 23px;
+	margin-left: 8%;
 	white-space: nowrap;
 	text-indent: -9999px;
 	border-radius: 50%;
@@ -1306,14 +1335,6 @@ header{
 	box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.31),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
 }
 
-.icon_mob, 
-.icon_mob:before, 
-.icon_mob:after {
-	background-image: url(../images/spritesheet_mob.png);
-	background-repeat: no-repeat;
-    display: block;
-}
-
 .icon_mob_fb {
 	position: absolute;
 	top: 23%;
@@ -1321,10 +1342,10 @@ header{
 	cursor: pointer;
     width: 19px;
     height: 40px;
-    background-position: -125px -5px;
+    background-position: -35px -458px;
 }
 .icon_mob_fb:hover {
-    background-position: -206px -57px;
+    background-position: -35px -415px;
 }
 .icon_mob_git {
 	position: absolute;
@@ -1333,11 +1354,11 @@ header{
     cursor: pointer;
     width: 55px;
     height: 42px;
-    background-position: -60px -5px;
+    background-position: -3px -45px;
 }
 
 .icon_mob_git:hover {
-    background-position: -167px -5px;
+    background-position: -3px 0;
 }
 .icon_mob_tw {
 	position: absolute;
@@ -1346,10 +1367,10 @@ header{
     cursor: pointer;    
     width: 45px;
     height: 33px;
-    background-position: -5px -5px;
+    background-position: -3px -184px;
 }
 .icon_mob_tw:hover {
-    background-position: -77px -125px;
+    background-position: -3px -148px;
 }
 .icon_mob_vk {
 	position: absolute;
@@ -1358,17 +1379,40 @@ header{
     cursor: pointer;
     width: 29px;
     height: 35px;
-    background-image:url(../images/vk_mob.png);
+    background-position: -3px -505px;
 }
 
 .icon_mob_vk:hover {
-	background-image: url(../images/spritesheet_mob.png);
-    width: 29px;
-    height: 35px;	
-    background-position: -167px -57px;
+    background-position: -3px -467px;
 }
+}
+@media only screen and (max-width : 530px) {
+.contacts{
+	margin-left: 5%;
 }
 
+.socials_item2{
+	margin-left: 7%;
+}
+}
+@media only screen and (max-width : 502px) {
+.contacts{
+	margin-left: 2.5%;
+}
+
+.socials_item2{
+	margin-left: 6%;
+}
+}
+@media only screen and (max-width : 480px) {
+.contacts{
+	margin-left: 1.5%;
+}
+
+.socials_item2{
+	margin-left: 23px;
+}
+}
 /* Custom, Retina */
 @media only screen and (max-width : 380px) {
 .information{
@@ -1389,6 +1433,7 @@ header{
 	float: right;
 	width: 70%;
 	font-size: 8px;
+	margin-top: -15px;
 }
 .enter {
     margin-left: 2%;
@@ -1410,7 +1455,7 @@ header{
 .contacts a:after{
 	left: 18%;
     height: 44px;
-	background-position: 0 -2px;
+	background-position: -3px -794px;
 }
 .gmail_cont:before{
 	top: 25%;
