--- a/app/css/lk.css
+++ b/app/css/lk.css
@@ -23,7 +23,7 @@
 	background-image: none;
 }
 .auth{
-	padding: 40px 38px 40px 38px;
+	padding: 40px 38px 38px 38px;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box; 
@@ -93,7 +93,7 @@
 .im_pass:before{
 	content: '';
 	position: absolute;
-	top: 12px;
+	top: 11px;
 	left: 14px;
     width: 22px;
     height: 20px;
@@ -102,14 +102,8 @@
 }
 
 .buttons{
-	position: absolute;
-	bottom: 39px;
-	left: 50%;
-	-webkit-transform: translateX(-50%);
-	-ms-transform: translateX(-50%);
-	-moz-transform: translateX(-50%);
-	-o-transform: translateX(-50%);
-	transform: translateX(-50%);
+	position: relative;
+	margin-left: 54px;
 }
 button[type="submit"]{
 	cursor: pointer;
@@ -118,9 +112,9 @@ button[type="submit"]{
 	font-family: "OpenSansSemiBold";
 	text-align: center;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.55);
-	width: 150px;
-	padding-top: 8px;
-	padding-bottom: 8px;
+	width: 151px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	-webkit-border-radius: 5px;
 			border-radius: 5px;
 	color: rgb(30, 116, 101);
@@ -133,7 +127,7 @@ button[type="submit"]{
 	-webkit-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
 	   -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
 			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
-	float: left;		
+
 }
 button[type="submit"]:hover{
 	background-image: -moz-linear-gradient( 90deg, rgb(58,160,135) 0%, rgb(95,220,189) 100%);
@@ -142,40 +136,187 @@ button[type="submit"]:hover{
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#5fdcbd', endColorstr='#3aa087', GradientType=0 )";
 }
 
-.tch{
-	display: inline-block;
+.checkbox_input {
+	margin-bottom: 20px;
+	margin-top: -6px;
+}
+.checkbox {
 	vertical-align: top;
-	font-size: 14px;
-	color: rgb(114, 112, 112);
-	line-height: 1.2;
+	margin: -3px 3px 0 0;
+	width: 17px;
+	height: 17px;
+	display: inline-block;
+}
+.checkbox + label {
+	background-image: none;
+	display: inline-block;
 	cursor: pointer;
-	margin-left: 20px;
-	margin-top: -7px;
-	margin-bottom: 50px;
+}
+.checkbox:not(checked) {
+	position: absolute;
+	opacity: 0;
+}
+.checkbox:not(checked) + label {
+	position: relative; 
+	padding-left: 26px;
+	background-image: none;
+	font-size: 14px;
+	font-family: "OpenSansRegular";
+	color: rgb(115, 113, 113);
+	line-height: 1.2;
+}
+.checkbox:not(checked) + label:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 15px;
+	height: 14px;
+	border-radius: 2px;
+	background: #fff;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
+
 }
 
-label {
-	margin-top: -7px;
-    width: 11px;
-    height: 11px;
-    position: relative;	
+.checkbox:checked + label:after {
+	content: '';
+	position: absolute;
+	top: 3px;
+	left: 3px;
+	background-position: -40px -324px; 
+	width: 9px; 
+	height: 8px; 
+	transition: all .2s; 
 }
-input[type="checkbox"] + span {
-    position: absolute;
-    left: 0; top: 0;
-    width: 17px;
-    height: 17px;
-	border-radius: 3px;
-	background-image: -moz-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
-	background-image: -webkit-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
-	background-image: -ms-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
-	box-shadow: 0 1px 0 0 rgba(167, 166, 166, 0.15),inset 0 1px 0 0 rgba(114, 112, 112, 0.33);
-    cursor: pointer;
+
+@media only screen and (max-width: 768px){
+.lk{
+	left: 30%;
 }
-input[type="checkbox"]:checked + span {
-    background-image: url(../images/spritesheet.png);
-    margin: 2px;
-    width: 9px;
-    height: 8px;
-    background-position: -5px -35px;
+}
+
+@media only screen and (max-width: 630px){
+.lk{
+	left: 25%;
+}
+}
+
+@media only screen and (max-width: 551px){
+.lk{
+	left: 20%;
+}
+}
+
+@media only screen and (max-width: 480px){
+.lk{
+	left: 8%;
+	width: 90%;
+}
+
+.text_auth{
+	width: 400px;
+	max-width: 95%;
+	font-size: 16px;
+	margin-left: 27px;
+	margin-top: 18px;
+}
+.form_auth{
+	background-image: none;
+}
+.auth{
+	padding: 47px 46px 44px 46px;
+	width: 95%;
+
+}
+.form_auth input[type="text"]{ 
+	font-size: 14px;
+	padding-left: 84px;
+	height: 49px;
+	line-height: 2;
+	margin-bottom: 29px;
+}
+
+.inputs:after{
+	left: 52px;
+	background-position: -39px -770px; 
+	width: 14px; 
+	height: 49px;
+}
+
+.im_mail:before{
+	top: 16px;
+	left: 17px;
+	background-position: -3px -596px; 
+	width: 27px; 
+	height: 20px;
+}
+
+.im_pass:before{
+	top: 16px;
+	left: 19px;
+	background-position: -3px -669px; 
+	width: 25px; 
+	height: 23px;
+}
+
+.buttons{
+	position: relative;
+	margin-left: 22%;
+}
+button[type="submit"]{
+	font-size: 16px;
+	width: 183px;
+	padding-top: 11px;
+	padding-bottom: 13px;
+	-webkit-border-radius: 7px;
+			border-radius: 7px;
+}
+.checkbox_input {
+	margin-bottom: 26px;
+	margin-top: -5px;
+}
+.checkbox:not(checked) + label {
+	padding-left: 33px;
+	font-size: 16px;
+}
+.checkbox:not(checked) + label:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 20px;
+	height: 19px;
+	border-radius: 2px;
+	background: #fff;
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
+}
+
+.checkbox:checked + label:after {
+	top: 4px;
+	left: 4px;
+	background-position: -35px -526px; 
+	width: 13px; 
+	height: 10px; 
+}
+}
+
+@media only screen and (max-width: 420px){
+.lk{
+	left: 8%;
+	width: 90%;
+}
+
+.buttons{
+	position: relative;
+	margin-left: 18%;
+}
+button[type="submit"]{
+	font-size: 16px;
+	width: 163px;
+	padding-top: 11px;
+	padding-bottom: 13px;
+	-webkit-border-radius: 7px;
+			border-radius: 7px;
+}
+
 }
