--- a/app/css/feedback.css
+++ b/app/css/feedback.css
@@ -7,10 +7,13 @@
 	position: relative;
   margin-bottom: 100px;
 }
+
 .inputs{
+	display: block;
 	width: 48%;
 	margin-bottom: 15px;
 }
+
 .left{
 	float: left;
 }
@@ -75,7 +78,9 @@
 .contact_form textarea{
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box; 
+	-webkit-box-sizing: border-box;
+	position: relative; 
+	display: block;
 	font-size: 12px;
 	font-family: "OpenSansLight";
 	color: rgb(114, 112, 112);
@@ -95,6 +100,101 @@
 	   -moz-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
 			box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
 }
+
+.contact_form .has_error{
+	position: relative;
+	border: 2px solid #e0ad9a;
+		-webkit-border-radius: 4px;
+			border-radius: 4px;
+}
+.error{
+	position: relative;
+}
+.error:before{
+	border: 1px solid rgb(211,118,84);
+		-webkit-border-radius: 4px;
+			border-radius: 4px;
+	background-color: rgb(211,118,84);
+	background-image: -moz-linear-gradient( 90deg, rgb(211,118,84) 0%, rgb(243,162,135) 90%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(211,118,84) 0%, rgb(243,162,135) 90%);
+	background-image: -ms-linear-gradient( 90deg, rgb(211,118,84) 0%, rgb(243,162,135) 90%);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3a287', endColorstr='#d37654', GradientType=0 )";
+	box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.17),inset 0px 1px 0px 0px rgba(255, 255, 255, 0.25);
+	position: absolute;
+	padding: 6px;
+	color: rgb(154, 78, 50);
+	line-height: 1;
+	text-align: left;
+	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.45);
+	height: 12px;
+	font-family: "OpenSansSemiBold";
+	font-size: 12px;
+	content: "";
+	z-index: 2;
+}
+.inputs.left .error:before{
+	left: -103px;
+	top: 30px;
+	content: "введите имя";
+}
+.inputs.left .error:after{
+	position: absolute;
+	right: 103%;
+	top: 37px;
+	content: "";
+	border: 7px solid transparent;
+	border-left-color: rgb(211,118,84);  
+    border-right: 0;
+}
+
+.inputs.right .error:before{
+	right: -110px;
+	top: 30px;
+	content: "введите email";
+}
+.inputs.right .error:after{
+	position: absolute;
+	right: -6%;
+	top: 36px;
+	content: "";
+	border: 7px solid transparent;
+	border-right-color: rgb(211,118,84);  
+    border-left: 0;
+}
+.input_message .error:before{
+	left: -98px;
+	top: 182px;
+	content: "ваш вопрос";
+}
+.input_message .error:after{
+	position: absolute;
+	left: -13px;
+	top: 188px;
+	content: "";
+	border: 7px solid transparent;
+	border-left-color: rgb(211,118,84);  
+    border-right: 0;
+}
+.captcha .error:before{
+	right: -87px;
+	top: 2px;
+	content: "код капчи";
+}
+.captcha .error:after{
+	position: absolute;
+	right: -6%;
+	top: 7px;
+	content: "";
+	border: 7px solid transparent;
+	border-right-color: rgb(211,118,84);  
+    border-left: 0;
+}
+.contact_form .has_succes{
+	border: 2px solid #51c5a8;
+		-webkit-border-radius: 3px;
+			border-radius: 3px;
+}
+
 .antispam{
 	display: block;
 	float: left;
