--- a/app/css/portfolio.css
+++ b/app/css/portfolio.css
@@ -162,6 +162,7 @@
     position:fixed;
     top:0;
     z-index: 2;
+    cursor: pointer;
 }
 
 .b-popup .b-popup-content{
@@ -245,6 +246,7 @@
     padding: 10px 10px 8px 10px; 
 	height: 41px;
 	width: 100%;
+	position: relative;
 	-webkit-border-radius: 3px;
 			border-radius: 3px;
 	border:1px solid rgb(214, 213, 211);
@@ -367,6 +369,84 @@ button[type="submit"]:hover{
 textarea{
 	resize:none;
 }
+
+.add_project_form .has_error{
+	position: relative;
+	border: 2px solid #e0ad9a;
+		-webkit-border-radius: 4px;
+			border-radius: 4px;
+}
+.error{
+	position: relative;
+}
+.error:before{
+	border: 1px solid rgb(211,118,84);
+		-webkit-border-radius: 4px;
+			border-radius: 4px;
+		background-color: rgb(211,118,84);
+	background-image: -moz-linear-gradient( 90deg, rgb(211,118,84) 0%, rgb(243,162,135) 90%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(211,118,84) 0%, rgb(243,162,135) 90%);
+	background-image: -ms-linear-gradient( 90deg, rgb(211,118,84) 0%, rgb(243,162,135) 90%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3a287', endColorstr='#d37654', GradientType=0 )";
+	box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.17),inset 0px 1px 0px 0px rgba(255, 255, 255, 0.25);
+	position: absolute;
+	padding: 6px;
+	color: rgb(154, 78, 50);
+	line-height: 1;
+	text-align: left;
+	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.45);
+	height: 12px;
+	font-family: "OpenSansSemiBold";
+	font-size: 12px;
+	content: "";
+	z-index: 2;
+}
+.inputs1 .error:before{
+	left: -136px;
+	top: 32px;
+	content: "введите название";
+}
+.error:after{
+	position: absolute;
+	left: -12px;
+	top: 39px;
+	content: "";
+	border: 7px solid transparent;
+	border-left-color: rgb(211,118,84);  
+    border-right: 0;
+}
+.inputs2 .error:before{
+	left: -131px;
+	top: 32px;
+	content: "ссылка на проект";
+}
+
+.input_description .error:before{
+	left: -136px;
+	top: 65px;
+	content: "описание проекта";
+}
+.input_description .error:after{
+	top: 71px;
+}
+.label_img .error:before{
+	left: -119px;
+	top: -3px;
+	content: "изображение";
+}
+.label_img .error:after{
+	top: 4px;
+	left: -23px;
+}
+.add_project_form .has_succes{
+	border: 2px solid #51c5a8;
+		-webkit-border-radius: 3px;
+			border-radius: 3px;
+}
+
+
+
+
 @media (min-width: 768px) and (max-width: 966px){
 .project_list{
 	margin-left: -8.7%;
