--- a/app/css/portfolio.css
+++ b/app/css/portfolio.css
@@ -153,7 +153,7 @@
 
 /*  Popap   */
 
-.b-popup{
+.popup{
 	display: none;
     width:100%;
     height:100%;
@@ -165,7 +165,7 @@
     cursor: pointer;
 }
 
-.b-popup .b-popup-content{
+.popup_content{
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -178,6 +178,7 @@
 			border-radius: 5px;
     width:320px;
     height: auto;
+    min-height: 57px;
     padding:21px 22px 27px 21px;
 	background-image: -moz-linear-gradient( 90deg, rgb(237,235,234) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
 	background-image: -webkit-linear-gradient( 90deg, rgb(237,235,234) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
@@ -187,6 +188,59 @@
 	   -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
 			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
 }
+.popup_succes{
+	display: none;
+	border: 1px solid rgb(73, 187, 123);
+	-webkit-border-radius: 4px;
+			border-radius: 4px;
+	background-color: rgba(73, 187, 123, 0.329);
+	position: absolute;
+	width: 300px;
+	padding: 6px 8px 1px 10px;
+	margin-top: 6px;
+}
+.ura{
+	font-size: 16px;
+	font-family: "OpenSansSemiBold";
+	color: rgb(73, 187, 123);
+}
+.text_succes{
+	font-size: 14px;
+	color: rgb(73, 187, 123);
+	line-height: 1.9;
+}
+
+.popup_error{
+	display: none;
+	border: 1px solid rgb(203, 105, 69);
+	-webkit-border-radius: 4px;
+			border-radius: 4px;
+	background-color: rgba(203, 105, 69, 0.329);
+	position: relative;
+	width: 300px;
+	padding: 6px 8px 1px 10px;
+	margin-top: 6px;
+	margin-bottom: 8px;
+	color: rgb(203, 105, 69);	
+}
+.popup_error_close{
+	position: absolute;
+	top: 8px;
+	right: 7px;
+	background-position: -34px -822px; 
+	width: 11px; 
+	height: 11px;
+}
+.err{
+	font-size: 16px;
+	font-family: "OpenSansSemiBold";
+}
+.text_error{
+	font-size: 14px;
+	line-height: 1.9;
+}
+
+
 .hide_project{
 	position: absolute;
 	top: 7px;
@@ -332,7 +386,7 @@
 	text-align: left;
 }
 
-button[type="submit"]{
+.add_project_form button[type="submit"]{
 	margin-left: 89px;
 	position: relative;
 	font-size: 14px;
@@ -356,7 +410,7 @@ button[type="submit"]{
 			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
 	cursor: pointer;	
 }
-button[type="submit"]:hover{
+.add_project_form button[type="submit"]:hover{
 	background-image: -moz-linear-gradient( 90deg, rgb(58,160,135) 0%, rgb(95,220,189) 100%);
 	background-image: -webkit-linear-gradient( 90deg, rgb(58,160,135) 0%, rgb(95,220,189) 100%);
 	background-image: -ms-linear-gradient( 90deg, rgb(58,160,135) 0%, rgb(95,220,189) 100%);
@@ -376,40 +430,15 @@ textarea{
 		-webkit-border-radius: 4px;
 			border-radius: 4px;
 }
-.error{
-	position: relative;
-}
-.error:before{
-	border: 1px solid rgb(211,118,84);
-		-webkit-border-radius: 4px;
-			border-radius: 4px;
-		background-color: rgb(211,118,84);
-	background-image: -moz-linear-gradient( 90deg, rgb(211,118,84) 0%, rgb(243,162,135) 90%);
-	background-image: -webkit-linear-gradient( 90deg, rgb(211,118,84) 0%, rgb(243,162,135) 90%);
-	background-image: -ms-linear-gradient( 90deg, rgb(211,118,84) 0%, rgb(243,162,135) 90%);
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3a287', endColorstr='#d37654', GradientType=0 )";
-	box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.17),inset 0px 1px 0px 0px rgba(255, 255, 255, 0.25);
-	position: absolute;
-	padding: 6px;
-	color: rgb(154, 78, 50);
-	line-height: 1;
-	text-align: left;
-	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.45);
-	height: 12px;
-	font-family: "OpenSansSemiBold";
-	font-size: 12px;
-	content: "";
-	z-index: 2;
-}
 .inputs1 .error:before{
 	left: -136px;
-	top: 32px;
+	top: 9px;
 	content: "введите название";
 }
 .error:after{
 	position: absolute;
 	left: -12px;
-	top: 39px;
+	top: 16px;
 	content: "";
 	border: 7px solid transparent;
 	border-left-color: rgb(211,118,84);  
@@ -417,25 +446,25 @@ textarea{
 }
 .inputs2 .error:before{
 	left: -131px;
-	top: 32px;
+	top: 9px;
 	content: "ссылка на проект";
 }
 
 .input_description .error:before{
 	left: -136px;
-	top: 65px;
+	top: 35px;
 	content: "описание проекта";
 }
 .input_description .error:after{
-	top: 71px;
+	top: 41px;
 }
 .label_img .error:before{
 	left: -119px;
-	top: -3px;
+	top: -20px;
 	content: "изображение";
 }
 .label_img .error:after{
-	top: 4px;
+	top: -15px;
 	left: -23px;
 }
 .add_project_form .has_succes{
